// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots basics|Tooltip/ListItem active icon 1`] = `
.emotion-3 {
  shape-rendering: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  display: block;
}

.emotion-2 {
  fill: currentColor;
}

.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 > * + * {
  padding-left: 10px;
}

.emotion-5:hover {
  background: rgba(0,0,0,.05);
}

.emotion-5:hover svg {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 > * + * {
  padding-left: 10px;
}

.emotion-0 {
  color: #333333;
  font-weight: 400;
  color: #FF4785;
  font-weight: 700;
}

.emotion-4 svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-4 path {
  fill: inherit;
}

.emotion-4 svg {
  opacity: 1;
}

.emotion-4 path {
  fill: #FF4785;
}

<a
  class="emotion-5"
>
  <span
    class="emotion-1"
  >
    <span
      class="emotion-0"
    >
      active icon
    </span>
  </span>
  <span
    class="emotion-4"
  >
    <svg
      class="emotion-3"
      viewBox="0 0 1024 1024"
    >
      <path
        class="emotion-2"
        d="M1008.714 490.522c-9.002-12.594-223.276-308.808-496.684-308.808-273.444 0-487.682 296.214-496.684 308.808l-15.316 21.49 15.316 21.466c9.002 12.618 223.24 308.808 496.684 308.808 273.408 0 487.682-296.19 496.684-308.808l15.316-21.466-15.316-21.49zM807.68 631.688c-46 39.142-92.558 70.064-138.382 91.904-53.874 25.676-106.786 38.694-157.266 38.694-50.49 0-103.406-13.018-157.282-38.696-45.826-21.838-92.382-52.758-138.378-91.902-53.708-45.706-94.302-92.122-116.61-119.672 22.36-27.602 63.028-74.094 116.612-119.696 45.996-39.146 92.554-70.068 138.378-91.908 53.876-25.678 106.792-38.698 157.28-38.698 50.48 0 103.39 13.020 157.264 38.696 45.824 21.842 92.382 52.764 138.382 91.91 53.602 45.614 94.264 92.098 116.624 119.696-22.306 27.544-62.898 73.954-116.622 119.672zM692.032 512.036c0 99.41-80.588 180-180 180s-180-80.59-180-180c0-99.406 80.588-179.998 180-179.998s180 80.59 180 179.998z"
      />
    </svg>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem all 1`] = `
@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

.emotion-9 {
  shape-rendering: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  display: block;
}

.emotion-8 {
  fill: currentColor;
}

.emotion-2 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 > * + * {
  padding-left: 10px;
}

.emotion-2:hover {
  background: rgba(0,0,0,.05);
}

.emotion-2:hover svg {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 > * + * {
  padding-left: 10px;
}

.emotion-3 {
  color: #333333;
  font-weight: 400;
}

.emotion-0 {
  color: #333333;
  font-weight: 400;
  -webkit-animation: animation-0 1.5s ease-in-out infinite;
  animation: animation-0 1.5s ease-in-out infinite;
  color: transparent;
  cursor: progress;
}

.emotion-10 svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-10 path {
  fill: inherit;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.emotion-18 svg {
  opacity: 1;
}

.emotion-18 path {
  fill: #FF4785;
}

.emotion-19 {
  color: #333333;
  font-weight: 400;
  color: #FF4785;
  font-weight: 700;
}

.emotion-20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #FF4785;
}

.emotion-22 svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-22 path {
  fill: inherit;
}

.emotion-22 svg {
  opacity: 1;
}

.emotion-22 path {
  fill: #FF4785;
}

.emotion-37 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.emotion-37 > * + * {
  padding-left: 10px;
}

.emotion-37:hover {
  background: rgba(0,0,0,.05);
}

.emotion-37:hover svg {
  opacity: 1;
}

.emotion-33 {
  color: #333333;
  font-weight: 400;
  color: rgba(51,51,51,0.3);
}

.emotion-34 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #999999;
}

<div>
  <a
    class="emotion-2"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        <span>
          Loading state
        </span>
      </span>
    </span>
  </a>
  <a
    class="emotion-2"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-3"
      >
        Default
      </span>
    </span>
  </a>
  <a
    class="emotion-2"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-3"
      >
        Default icon
      </span>
    </span>
    <span
      class="emotion-10"
    >
      <svg
        class="emotion-9"
        viewBox="0 0 1024 1024"
      >
        <path
          class="emotion-8"
          d="M1008.714 490.522c-9.002-12.594-223.276-308.808-496.684-308.808-273.444 0-487.682 296.214-496.684 308.808l-15.316 21.49 15.316 21.466c9.002 12.618 223.24 308.808 496.684 308.808 273.408 0 487.682-296.19 496.684-308.808l15.316-21.466-15.316-21.49zM807.68 631.688c-46 39.142-92.558 70.064-138.382 91.904-53.874 25.676-106.786 38.694-157.266 38.694-50.49 0-103.406-13.018-157.282-38.696-45.826-21.838-92.382-52.758-138.378-91.902-53.708-45.706-94.302-92.122-116.61-119.672 22.36-27.602 63.028-74.094 116.612-119.696 45.996-39.146 92.554-70.068 138.378-91.908 53.876-25.678 106.792-38.698 157.28-38.698 50.48 0 103.39 13.020 157.264 38.696 45.824 21.842 92.382 52.764 138.382 91.91 53.602 45.614 94.264 92.098 116.624 119.696-22.306 27.544-62.898 73.954-116.622 119.672zM692.032 512.036c0 99.41-80.588 180-180 180s-180-80.59-180-180c0-99.406 80.588-179.998 180-179.998s180 80.59 180 179.998z"
        />
      </svg>
    </span>
  </a>
  <a
    class="emotion-2"
  >
    <span
      class="emotion-12"
    >
      left
    </span>
    <span
      class="emotion-1"
    >
      <span
        class="emotion-3"
      >
        title
      </span>
      <span
        class="emotion-14"
      >
        center
      </span>
    </span>
    <span
      class="emotion-10"
    >
      right
    </span>
  </a>
  <a
    class="emotion-2"
  >
    <span
      class="emotion-18"
    >
      left
    </span>
    <span
      class="emotion-1"
    >
      <span
        class="emotion-19"
      >
        active
      </span>
      <span
        class="emotion-20"
      >
        center
      </span>
    </span>
    <span
      class="emotion-22"
    >
      right
    </span>
  </a>
  <a
    class="emotion-2"
  >
    <span
      class="emotion-18"
    >
      left
    </span>
    <span
      class="emotion-1"
    >
      <span
        class="emotion-19"
      >
        active icon
      </span>
      <span
        class="emotion-20"
      >
        center
      </span>
    </span>
    <span
      class="emotion-22"
    >
      <svg
        class="emotion-9"
        viewBox="0 0 1024 1024"
      >
        <path
          class="emotion-8"
          d="M1008.714 490.522c-9.002-12.594-223.276-308.808-496.684-308.808-273.444 0-487.682 296.214-496.684 308.808l-15.316 21.49 15.316 21.466c9.002 12.618 223.24 308.808 496.684 308.808 273.408 0 487.682-296.19 496.684-308.808l15.316-21.466-15.316-21.49zM807.68 631.688c-46 39.142-92.558 70.064-138.382 91.904-53.874 25.676-106.786 38.694-157.266 38.694-50.49 0-103.406-13.018-157.282-38.696-45.826-21.838-92.382-52.758-138.378-91.902-53.708-45.706-94.302-92.122-116.61-119.672 22.36-27.602 63.028-74.094 116.612-119.696 45.996-39.146 92.554-70.068 138.378-91.908 53.876-25.678 106.792-38.698 157.28-38.698 50.48 0 103.39 13.020 157.264 38.696 45.824 21.842 92.382 52.764 138.382 91.91 53.602 45.614 94.264 92.098 116.624 119.696-22.306 27.544-62.898 73.954-116.622 119.672zM692.032 512.036c0 99.41-80.588 180-180 180s-180-80.59-180-180c0-99.406 80.588-179.998 180-179.998s180 80.59 180 179.998z"
        />
      </svg>
    </span>
  </a>
  <a
    class="emotion-37"
    disabled=""
  >
    <span
      class="emotion-12"
      disabled=""
    >
      left
    </span>
    <span
      class="emotion-1"
    >
      <span
        class="emotion-33"
        disabled=""
      >
        disabled
      </span>
      <span
        class="emotion-34"
        disabled=""
      >
        center
      </span>
    </span>
    <span
      class="emotion-10"
      disabled=""
    >
      right
    </span>
  </a>
</div>
`;

exports[`Storyshots basics|Tooltip/ListItem default 1`] = `
.emotion-2 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 > * + * {
  padding-left: 10px;
}

.emotion-2:hover {
  background: rgba(0,0,0,.05);
}

.emotion-2:hover svg {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 > * + * {
  padding-left: 10px;
}

.emotion-0 {
  color: #333333;
  font-weight: 400;
}

<a
  class="emotion-2"
>
  <span
    class="emotion-1"
  >
    <span
      class="emotion-0"
    >
      Default
    </span>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem default icon 1`] = `
.emotion-3 {
  shape-rendering: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  display: block;
}

.emotion-2 {
  fill: currentColor;
}

.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 > * + * {
  padding-left: 10px;
}

.emotion-5:hover {
  background: rgba(0,0,0,.05);
}

.emotion-5:hover svg {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 > * + * {
  padding-left: 10px;
}

.emotion-0 {
  color: #333333;
  font-weight: 400;
}

.emotion-4 svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-4 path {
  fill: inherit;
}

<a
  class="emotion-5"
>
  <span
    class="emotion-1"
  >
    <span
      class="emotion-0"
    >
      Default icon
    </span>
  </span>
  <span
    class="emotion-4"
  >
    <svg
      class="emotion-3"
      viewBox="0 0 1024 1024"
    >
      <path
        class="emotion-2"
        d="M1008.714 490.522c-9.002-12.594-223.276-308.808-496.684-308.808-273.444 0-487.682 296.214-496.684 308.808l-15.316 21.49 15.316 21.466c9.002 12.618 223.24 308.808 496.684 308.808 273.408 0 487.682-296.19 496.684-308.808l15.316-21.466-15.316-21.49zM807.68 631.688c-46 39.142-92.558 70.064-138.382 91.904-53.874 25.676-106.786 38.694-157.266 38.694-50.49 0-103.406-13.018-157.282-38.696-45.826-21.838-92.382-52.758-138.378-91.902-53.708-45.706-94.302-92.122-116.61-119.672 22.36-27.602 63.028-74.094 116.612-119.696 45.996-39.146 92.554-70.068 138.378-91.908 53.876-25.678 106.792-38.698 157.28-38.698 50.48 0 103.39 13.020 157.264 38.696 45.824 21.842 92.382 52.764 138.382 91.91 53.602 45.614 94.264 92.098 116.624 119.696-22.306 27.544-62.898 73.954-116.622 119.672zM692.032 512.036c0 99.41-80.588 180-180 180s-180-80.59-180-180c0-99.406 80.588-179.998 180-179.998s180 80.59 180 179.998z"
      />
    </svg>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem disabled 1`] = `
.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 > * + * {
  padding-left: 10px;
}

.emotion-4 svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-4 path {
  fill: inherit;
}

.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.emotion-5 > * + * {
  padding-left: 10px;
}

.emotion-5:hover {
  background: rgba(0,0,0,.05);
}

.emotion-5:hover svg {
  opacity: 1;
}

.emotion-1 {
  color: #333333;
  font-weight: 400;
  color: rgba(51,51,51,0.3);
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #999999;
}

<a
  class="emotion-5"
  disabled=""
>
  <span
    class="emotion-0"
    disabled=""
  >
    left
  </span>
  <span
    class="emotion-3"
  >
    <span
      class="emotion-1"
      disabled=""
    >
      disabled
    </span>
    <span
      class="emotion-2"
      disabled=""
    >
      center
    </span>
  </span>
  <span
    class="emotion-4"
    disabled=""
  >
    right
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem loading 1`] = `
@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

.emotion-2 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 > * + * {
  padding-left: 10px;
}

.emotion-2:hover {
  background: rgba(0,0,0,.05);
}

.emotion-2:hover svg {
  opacity: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 > * + * {
  padding-left: 10px;
}

.emotion-0 {
  color: #333333;
  font-weight: 400;
  -webkit-animation: animation-0 1.5s ease-in-out infinite;
  animation: animation-0 1.5s ease-in-out infinite;
  color: transparent;
  cursor: progress;
}

<a
  class="emotion-2"
>
  <span
    class="emotion-1"
  >
    <span
      class="emotion-0"
    >
      <span>
        Loading state
      </span>
    </span>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem w/positions 1`] = `
.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 > * + * {
  padding-left: 10px;
}

.emotion-5:hover {
  background: rgba(0,0,0,.05);
}

.emotion-5:hover svg {
  opacity: 1;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 > * + * {
  padding-left: 10px;
}

.emotion-1 {
  color: #333333;
  font-weight: 400;
}

.emotion-4 svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-4 path {
  fill: inherit;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

<a
  class="emotion-5"
>
  <span
    class="emotion-0"
  >
    left
  </span>
  <span
    class="emotion-3"
  >
    <span
      class="emotion-1"
    >
      title
    </span>
    <span
      class="emotion-2"
    >
      center
    </span>
  </span>
  <span
    class="emotion-4"
  >
    right
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem w/positions active 1`] = `
.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: rgba(51,51,51,0.5);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 > * + * {
  padding-left: 10px;
}

.emotion-5:hover {
  background: rgba(0,0,0,.05);
}

.emotion-5:hover svg {
  opacity: 1;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 > * + * {
  padding-left: 10px;
}

.emotion-0 svg {
  opacity: 1;
}

.emotion-0 path {
  fill: #FF4785;
}

.emotion-1 {
  color: #333333;
  font-weight: 400;
  color: #FF4785;
  font-weight: 700;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #FF4785;
}

.emotion-4 svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-4 path {
  fill: inherit;
}

.emotion-4 svg {
  opacity: 1;
}

.emotion-4 path {
  fill: #FF4785;
}

<a
  class="emotion-5"
>
  <span
    class="emotion-0"
  >
    left
  </span>
  <span
    class="emotion-3"
  >
    <span
      class="emotion-1"
    >
      active
    </span>
    <span
      class="emotion-2"
    >
      center
    </span>
  </span>
  <span
    class="emotion-4"
  >
    right
  </span>
</a>
`;
